force-app/main/default/objects/HAM_Event_FAQ__c/HAM_Event_FAQ__c.object-meta.xml
<CustomObject>
    <label>Event FAQ</label>
    <nameField>
        <displayFormat>EFAQ-{000000}</displayFormat>
        <label>Event FAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>