force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Answer__c.field-meta.xml
<CustomField>
    <fullName>HAM_Answer__c</fullName>
    <description>The answer text displayed to attendees for this FAQ entry.</description>
    <inlineHelpText>Enter the full answer to the FAQ question. Supports up to 32,768 characters.</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>