force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_Category__c</fullName>
    <description>Groups FAQ entries under a common heading (e.g., &quot;General&quot;, &quot;Registration Pricing &amp; Refunds&quot;, &quot;Housing&quot;).</description>
    <inlineHelpText>Enter a category name to group related FAQs together on the event page.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>