force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Event__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this FAQ entry to the parent Cvent event record.</description>
    <inlineHelpText>Select the Event this FAQ belongs to. The FAQ will appear on that event&apos;s public-facing page.</inlineHelpText>
    <label>Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event FAQs</relationshipLabel>
    <relationshipName>Event_FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>