force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Last_Published_At__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Published_At__c</fullName>
    <description>Timestamp of when this FAQ was last requested to be published to the external event platform. Mirrors conference360__Last_Publish_To_Platform_Requested_At__c.</description>
    <inlineHelpText>Auto-populated when a publish request is triggered. Used to track sync status with the event platform.</inlineHelpText>
    <label>Last Published At</label>
    <type>DateTime</type>
</CustomField>