force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Question__c.field-meta.xml
<CustomField>
    <fullName>HAM_Question__c</fullName>
    <description>The question text displayed to attendees on the event page.</description>
    <inlineHelpText>Enter the FAQ question as it should appear to attendees (max 255 characters).</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>