force-app/main/default/objects/HAM_Event_FAQ__c/fields/HAM_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sort_Order__c</fullName>
    <description>Numeric value that controls the display order of FAQs within their category. Lower numbers appear first.</description>
    <inlineHelpText>Enter a number to set this FAQ&apos;s position. Lower numbers appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>